--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
 
     <div class="header_banner">
-      <a href="#">
+      <a href="#" class="d-flex justify-content-center">
         <img src="./images/Logo.png" alt="">
       </a>
     </div>
@@ -48,7 +48,7 @@
     </div>
 
     <nav>
-      <ul class="list-unstyled d-flex justify-content-around">
+      <ul class="list-unstyled d-flex justify-content-around mb-0">
         <li>
           <a href="https://bellagiodiamondsnyc.com/product-category/engagement-rings/">Engagement Rings</a>
         </li>
@@ -78,14 +78,70 @@
         <h1>SEARCH DIAMONDS : <span class="ng-binding">Showing&nbsp;33,915&nbsp;diamonds</span></h1>
         <div id="filterSlideToggleBtn">SEARCH <i class="fas fa-caret-down"></i></div>
       </div>
-      <table class="results-table">
-          <thead>
-            <tr>
-              <th>
-                
-              </th>
-            </tr>
-          </thead>
+      <table class="results_table">
+        <thead>
+          <tr>
+
+            <th>
+              <div class="sort" data-sort="all">
+                <span>SHAPE<i class="ml-2 fas fa-angle-up"></i></span>
+                <div class="attributes">ALL</div>
+              </div>
+            </th>
+
+            <th>
+              <div class="sort" data-sort="carat">
+                <span>CARAT<i class="ml-2 fas fa-angle-up"></i></span>
+                <div class="attributes">0.00 - 30.00</div>
+              </div>
+            </th>
+
+            <th>
+              <div class="sort" data-sort="clarity">
+                <span>CLARITY<i class="ml-2 fas fa-angle-up"></i></span>
+                <div class="attributes">IF - I1</div>
+              </div>
+            </th>
+
+            <th>
+              <div class="sort" data-sort="cut">
+                <span>CUT<i class="ml-2 fas fa-angle-up"></i></span>
+                <div class="attributes">EX - FAIR</div>
+              </div>
+            </th>
+
+            <th>
+              <div class="sort" data-sort="ploish">
+                <span>POLISH</span>
+                <div class="attributes">EX - FAIR</div>
+              </div>
+            </th>
+
+            <th>
+              <div class="sort" data-sort="symmetry">
+                <span>SYMMETRY</span>
+                <div class="attributes"> EX - FAIR </div>
+              </div>
+            </th>
+
+            <th>
+              <div class="sort" data-sort="lab">
+                <span>LAB<i class="ml-2 fas fa-angle-up"></i></span>
+                <div class="attributes">ALL</div>
+              </div>
+            </th>
+
+            <th>
+              <div class="sort" data-sort="price">
+                <span>PRICE<i class="ml-2 fas fa-angle-up"></i></span>
+                <div class="attributes">0 - 10000000</div>
+              </div>
+            </th>
+
+
+
+          </tr>
+        </thead>
       </table>
     </div>
   </div>
