--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       </ul>
     </div>
 
-    <div class="header_banner">
-      <a href="#" class="d-flex justify-content-center">
+    <div class="header_banner text-center">
+      <a href="#" class="d-block">
         <img src="./images/Logo.png" alt="">
       </a>
     </div>
@@ -78,10 +78,9 @@
         <h1>SEARCH DIAMONDS : <span class="ng-binding">Showing&nbsp;33,915&nbsp;diamonds</span></h1>
         <div id="filterSlideToggleBtn">SEARCH <i class="fas fa-caret-down"></i></div>
       </div>
-      <table class="results_table">
+      <table class="results_table" id="results">
         <thead>
           <tr>
-
             <th>
               <div class="sort" data-sort="shape">
                 <span>SHAPE<i class="ml-2 fas fa-angle-up"></i></span>
@@ -117,7 +116,7 @@
             </th>
 
             <th>
-              <div class="sort" data-sort="ploish">
+              <div class="sort" data-sort="polish">
                 <span>POLISH</span>
                 <div class="attributes">EX - FAIR</div>
               </div>
@@ -161,6 +160,7 @@
             <td class="lab">GIA</td>
             <td class="price">$1,028,765.00</td>
           </tr>
+
           <tr>
             <td class="shape">Round</td>
             <td class="carat">11.42</td>
@@ -172,6 +172,7 @@
             <td class="lab">GIA</td>
             <td class="price">$161.00</td>
           </tr>
+
           <tr>
             <td class="shape">Pear</td>
             <td class="carat">11.42</td>
@@ -183,6 +184,7 @@
             <td class="lab">GIA</td>
             <td class="price">$170.00</td>
           </tr>
+
           <tr>
             <td class="shape">Round</td>
             <td class="carat">11.42</td>
@@ -194,6 +196,7 @@
             <td class="lab">GIA</td>
             <td class="price">$161.00</td>
           </tr>
+
           <tr>
             <td class="shape">Pear</td>
             <td class="carat">11.42</td>
@@ -205,6 +208,7 @@
             <td class="lab">GIA</td>
             <td class="price">$1,028,765.00</td>
           </tr>
+
           <tr>
             <td class="shape">Round</td>
             <td class="carat">11.42</td>
@@ -216,6 +220,7 @@
             <td class="lab">GIA</td>
             <td class="price">$161.00</td>
           </tr>
+
           <tr>
             <td class="shape">Pear</td>
             <td class="carat">11.42</td>
@@ -227,6 +232,7 @@
             <td class="lab">GIA</td>
             <td class="price">$170.00</td>
           </tr>
+
           <tr>
             <td class="shape">Round</td>
             <td class="carat">11.42</td>
@@ -238,6 +244,7 @@
             <td class="lab">GIA</td>
             <td class="price">$161.00</td>
           </tr>
+
           <tr>
             <td class="shape">Asscher</td>
             <td class="carat">11.42</td>
@@ -249,6 +256,7 @@
             <td class="lab">GIA</td>
             <td class="price">$1,028,765.00</td>
           </tr>
+
           <tr>
             <td class="shape">Asscher</td>
             <td class="carat">11.42</td>
@@ -260,6 +268,7 @@
             <td class="lab">GIA</td>
             <td class="price">$161.00</td>
           </tr>
+
           <tr>
             <td class="shape">Asscher</td>
             <td class="carat">11.42</td>
@@ -271,6 +280,7 @@
             <td class="lab">GIA</td>
             <td class="price">$170.00</td>
           </tr>
+
           <tr>
             <td class="shape">Pear</td>
             <td class="carat">11.42</td>
@@ -282,6 +292,7 @@
             <td class="lab">GIA</td>
             <td class="price">$161.00</td>
           </tr>
+
           <tr>
             <td class="shape">Pear</td>
             <td class="carat">11.42</td>
@@ -293,6 +304,7 @@
             <td class="lab">GIA</td>
             <td class="price">$1,028,765.00</td>
           </tr>
+
           <tr>
             <td class="shape">Asscher</td>
             <td class="carat">11.42</td>
@@ -304,6 +316,7 @@
             <td class="lab">GIA</td>
             <td class="price">$161.00</td>
           </tr>
+
           <tr>
             <td class="shape">Asscher</td>
             <td class="carat">11.42</td>
@@ -315,6 +328,7 @@
             <td class="lab">GIA</td>
             <td class="price">$170.00</td>
           </tr>
+
           <tr>
             <td class="shape">Asscher</td>
             <td class="carat">11.42</td>
@@ -326,6 +340,7 @@
             <td class="lab">GIA</td>
             <td class="price">$161.00</td>
           </tr>
+
           <tr>
             <td class="shape">Pear</td>
             <td class="carat">11.42</td>
@@ -337,6 +352,7 @@
             <td class="lab">GIA</td>
             <td class="price">$1,028,765.00</td>
           </tr>
+
           <tr>
             <td class="shape">Cushion Modified	</td>
             <td class="carat">11.42</td>
@@ -348,6 +364,7 @@
             <td class="lab">GIA</td>
             <td class="price">$161.00</td>
           </tr>
+
           <tr>
             <td class="shape">Cushion Modified	</td>
             <td class="carat">11.42</td>
@@ -359,6 +376,7 @@
             <td class="lab">GIA</td>
             <td class="price">$170.00</td>
           </tr>
+
           <tr>
             <td class="shape">Pear</td>
             <td class="carat">11.42</td>
@@ -370,6 +388,7 @@
             <td class="lab">GIA</td>
             <td class="price">$161.00</td>
           </tr>
+
           <tr>
             <td class="shape">Cushion Modified	</td>
             <td class="carat">11.42</td>
@@ -381,6 +400,7 @@
             <td class="lab">GIA</td>
             <td class="price">$1,028,765.00</td>
           </tr>
+
           <tr>
             <td class="shape">Cushion Modified	</td>
             <td class="carat">11.42</td>
@@ -392,6 +412,7 @@
             <td class="lab">GIA</td>
             <td class="price">$161.00</td>
           </tr>
+
           <tr>
             <td class="shape">Cushion Modified	</td>
             <td class="carat">11.42</td>
@@ -403,6 +424,7 @@
             <td class="lab">GIA</td>
             <td class="price">$170.00</td>
           </tr>
+          
           <tr>
             <td class="shape">Cushion Modified	</td>
             <td class="carat">11.42</td>
