--- a/index.html
+++ b/index.html
@@ -74,11 +74,13 @@
 
   <div class="container">
     <div id="diamondsearch">
+
       <div class="search-title d-flex align-items-center">
         <h1>SEARCH DIAMONDS : <span class="ng-binding">Showing&nbsp;33,915&nbsp;diamonds</span></h1>
         <div id="filterSlideToggleBtn">SEARCH <i class="fas fa-caret-down"></i></div>
       </div>
-      <table class="results_table" id="results">
+
+      <table class="results_table">
         <thead>
           <tr>
             <th>
@@ -147,8 +149,294 @@
 
           </tr>
         </thead>
-
         <tbody class="list">
+          <tr>
+            <td class="shape">Pear</td>
+            <td class="carat">11.42</td>
+            <td class="color">M</td>
+            <td class="clarity">IF</td>
+            <td class="cut">Excellent</td>
+            <td class="polish">Fair</td>
+            <td class="symmetry">Good</td>
+            <td class="lab">GIA</td>
+            <td class="price">$1,028,765.00</td>
+          </tr>
+
+          <tr>
+            <td class="shape">Round</td>
+            <td class="carat">11.42</td>
+            <td class="color">H</td>
+            <td class="clarity">IF</td>
+            <td class="cut">Good</td>
+            <td class="polish">Good</td>
+            <td class="symmetry">Good</td>
+            <td class="lab">GIA</td>
+            <td class="price">$161.00</td>
+          </tr>
+
+          <tr>
+            <td class="shape">Pear</td>
+            <td class="carat">11.42</td>
+            <td class="color">D</td>
+            <td class="clarity">VS2</td>
+            <td class="cut"></td>
+            <td class="polish">Very Good</td>
+            <td class="symmetry">Good</td>
+            <td class="lab">GIA</td>
+            <td class="price">$170.00</td>
+          </tr>
+
+          <tr>
+            <td class="shape">Round</td>
+            <td class="carat">11.42</td>
+            <td class="color">I</td>
+            <td class="clarity">I1</td>
+            <td class="cut">Good</td>
+            <td class="polish">Very Good</td>
+            <td class="symmetry">Good</td>
+            <td class="lab">GIA</td>
+            <td class="price">$161.00</td>
+          </tr>
+
+          <tr>
+            <td class="shape">Pear</td>
+            <td class="carat">11.42</td>
+            <td class="color">M</td>
+            <td class="clarity">IF</td>
+            <td class="cut">Excellent</td>
+            <td class="polish">Fair</td>
+            <td class="symmetry">Good</td>
+            <td class="lab">GIA</td>
+            <td class="price">$1,028,765.00</td>
+          </tr>
+
+          <tr>
+            <td class="shape">Round</td>
+            <td class="carat">11.42</td>
+            <td class="color">H</td>
+            <td class="clarity">IF</td>
+            <td class="cut">Good</td>
+            <td class="polish">Good</td>
+            <td class="symmetry">Good</td>
+            <td class="lab">GIA</td>
+            <td class="price">$161.00</td>
+          </tr>
+
+          <tr>
+            <td class="shape">Pear</td>
+            <td class="carat">11.42</td>
+            <td class="color">D</td>
+            <td class="clarity">VS2</td>
+            <td class="cut"></td>
+            <td class="polish">Very Good</td>
+            <td class="symmetry">Good</td>
+            <td class="lab">GIA</td>
+            <td class="price">$170.00</td>
+          </tr>
+
+          <tr>
+            <td class="shape">Round</td>
+            <td class="carat">11.42</td>
+            <td class="color">I</td>
+            <td class="clarity">I1</td>
+            <td class="cut">Good</td>
+            <td class="polish">Very Good</td>
+            <td class="symmetry">Good</td>
+            <td class="lab">GIA</td>
+            <td class="price">$161.00</td>
+          </tr>
+
+          <tr>
+            <td class="shape">Asscher</td>
+            <td class="carat">11.42</td>
+            <td class="color">M</td>
+            <td class="clarity">IF</td>
+            <td class="cut">Excellent</td>
+            <td class="polish">Fair</td>
+            <td class="symmetry">Good</td>
+            <td class="lab">GIA</td>
+            <td class="price">$1,028,765.00</td>
+          </tr>
+
+          <tr>
+            <td class="shape">Asscher</td>
+            <td class="carat">11.42</td>
+            <td class="color">H</td>
+            <td class="clarity">IF</td>
+            <td class="cut">Good</td>
+            <td class="polish">Good</td>
+            <td class="symmetry">Good</td>
+            <td class="lab">GIA</td>
+            <td class="price">$161.00</td>
+          </tr>
+
+          <tr>
+            <td class="shape">Asscher</td>
+            <td class="carat">11.42</td>
+            <td class="color">D</td>
+            <td class="clarity">VS2</td>
+            <td class="cut"></td>
+            <td class="polish">Very Good</td>
+            <td class="symmetry">Good</td>
+            <td class="lab">GIA</td>
+            <td class="price">$170.00</td>
+          </tr>
+
+          <tr>
+            <td class="shape">Pear</td>
+            <td class="carat">11.42</td>
+            <td class="color">I</td>
+            <td class="clarity">I1</td>
+            <td class="cut">Good</td>
+            <td class="polish">Very Good</td>
+            <td class="symmetry">Good</td>
+            <td class="lab">GIA</td>
+            <td class="price">$161.00</td>
+          </tr>
+
+          <tr>
+            <td class="shape">Pear</td>
+            <td class="carat">11.42</td>
+            <td class="color">M</td>
+            <td class="clarity">IF</td>
+            <td class="cut">Excellent</td>
+            <td class="polish">Fair</td>
+            <td class="symmetry">Good</td>
+            <td class="lab">GIA</td>
+            <td class="price">$1,028,765.00</td>
+          </tr>
+
+          <tr>
+            <td class="shape">Asscher</td>
+            <td class="carat">11.42</td>
+            <td class="color">H</td>
+            <td class="clarity">IF</td>
+            <td class="cut">Good</td>
+            <td class="polish">Good</td>
+            <td class="symmetry">Good</td>
+            <td class="lab">GIA</td>
+            <td class="price">$161.00</td>
+          </tr>
+
+          <tr>
+            <td class="shape">Asscher</td>
+            <td class="carat">11.42</td>
+            <td class="color">D</td>
+            <td class="clarity">VS2</td>
+            <td class="cut"></td>
+            <td class="polish">Very Good</td>
+            <td class="symmetry">Good</td>
+            <td class="lab">GIA</td>
+            <td class="price">$170.00</td>
+          </tr>
+
+          <tr>
+            <td class="shape">Asscher</td>
+            <td class="carat">11.42</td>
+            <td class="color">I</td>
+            <td class="clarity">I1</td>
+            <td class="cut">Good</td>
+            <td class="polish">Very Good</td>
+            <td class="symmetry">Good</td>
+            <td class="lab">GIA</td>
+            <td class="price">$161.00</td>
+          </tr>
+
+          <tr>
+            <td class="shape">Pear</td>
+            <td class="carat">11.42</td>
+            <td class="color">M</td>
+            <td class="clarity">IF</td>
+            <td class="cut">Excellent</td>
+            <td class="polish">Fair</td>
+            <td class="symmetry">Good</td>
+            <td class="lab">GIA</td>
+            <td class="price">$1,028,765.00</td>
+          </tr>
+
+          <tr>
+            <td class="shape">Cushion Modified	</td>
+            <td class="carat">11.42</td>
+            <td class="color">H</td>
+            <td class="clarity">IF</td>
+            <td class="cut">Good</td>
+            <td class="polish">Good</td>
+            <td class="symmetry">Good</td>
+            <td class="lab">GIA</td>
+            <td class="price">$161.00</td>
+          </tr>
+
+          <tr>
+            <td class="shape">Cushion Modified	</td>
+            <td class="carat">11.42</td>
+            <td class="color">D</td>
+            <td class="clarity">VS2</td>
+            <td class="cut"></td>
+            <td class="polish">Very Good</td>
+            <td class="symmetry">Good</td>
+            <td class="lab">GIA</td>
+            <td class="price">$170.00</td>
+          </tr>
+
+          <tr>
+            <td class="shape">Pear</td>
+            <td class="carat">11.42</td>
+            <td class="color">I</td>
+            <td class="clarity">I1</td>
+            <td class="cut">Good</td>
+            <td class="polish">Very Good</td>
+            <td class="symmetry">Good</td>
+            <td class="lab">GIA</td>
+            <td class="price">$161.00</td>
+          </tr>
+
+          <tr>
+            <td class="shape">Cushion Modified	</td>
+            <td class="carat">11.42</td>
+            <td class="color">M</td>
+            <td class="clarity">IF</td>
+            <td class="cut">Excellent</td>
+            <td class="polish">Fair</td>
+            <td class="symmetry">Good</td>
+            <td class="lab">GIA</td>
+            <td class="price">$1,028,765.00</td>
+          </tr>
+
+          <tr>
+            <td class="shape">Cushion Modified	</td>
+            <td class="carat">11.42</td>
+            <td class="color">H</td>
+            <td class="clarity">IF</td>
+            <td class="cut">Good</td>
+            <td class="polish">Good</td>
+            <td class="symmetry">Good</td>
+            <td class="lab">GIA</td>
+            <td class="price">$161.00</td>
+          </tr>
+
+          <tr>
+            <td class="shape">Cushion Modified	</td>
+            <td class="carat">11.42</td>
+            <td class="color">D</td>
+            <td class="clarity">VS2</td>
+            <td class="cut"></td>
+            <td class="polish">Very Good</td>
+            <td class="symmetry">Good</td>
+            <td class="lab">GIA</td>
+            <td class="price">$170.00</td>
+          </tr>
+          
+          <tr>
+            <td class="shape">Cushion Modified	</td>
+            <td class="carat">11.42</td>
+            <td class="color">I</td>
+            <td class="clarity">I1</td>
+            <td class="cut">Good</td>
+            <td class="polish">Very Good</td>
+            <td class="symmetry">Good</td>
+            <td class="lab">GIA</td>
+            <td class="price">$161.00</td>
+          </tr>
           <tr>
             <td class="shape">Pear</td>
             <td class="carat">11.42</td>
@@ -438,6 +726,17 @@
           </tr>
         </tbody>
       </table>
+ 
+      <div class="search_fotter d-flex justify-content-end align-items-center">
+        <div class="pg_nav d-flex justify-content-start align-items-center">
+            <span class="jPaginateFrist pgBtn mr-2">First</span>
+            <ul class="pagination mb-0"></ul>
+            <span class="jPaginatePrev pgBtn"><i class="fas fa-angle-left"></i></span>
+            <span class="jPaginateNext pgBtn"><i class="fas fa-angle-right"></i></span>
+            <span class="jPaginateLast pgBtn">Last</span>
+        </div>
+      </div>
+
     </div>
   </div>
 
