--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@
  
       <div class="search_fotter d-flex justify-content-end align-items-center">
         <div class="pg_nav d-flex justify-content-start align-items-center">
-            <span class="jPaginateFrist pgBtn mr-2">First</span>
+            <span class="jPaginateFirst pgBtn mr-2">First</span>
             <ul class="pagination mb-0"></ul>
             <span class="jPaginatePrev pgBtn"><i class="fas fa-angle-left"></i></span>
             <span class="jPaginateNext pgBtn"><i class="fas fa-angle-right"></i></span>
