--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
 
     <nav>
-      <ul class="list-unstyled d-flex justify-content-around mb-0">
+      <ul class="list-unstyled d-flex flex-wrap justify-content-around mb-0">
         <li>
           <a href="https://bellagiodiamondsnyc.com/product-category/engagement-rings/">Engagement Rings</a>
         </li>
