--- a/index.html
+++ b/index.html
@@ -82,6 +82,41 @@
         <div id="filterSlideToggleBtn">SEARCH <i class="fas fa-caret-down"></i></div>
       </div>
 
+      <div id="ds_filter">
+        <div class="filter_options">
+          <div class="shape">
+            <h6 class="option_title text-uppercase">Shape</h6>
+            <div class="shape_options d-flex justify-content-between align-items-center">
+              <div class="shape_s_option" data-shape="round"><img src="/images/RoundShape.png" alt="round" ></div>
+              <div class="shape_s_option" data-shape="princess"><img src="/images/princessShape.png" alt="princess" ></div>
+              <div class="shape_s_option" data-shape="emerald"><img src="/images/emeraldShape.png" alt="emerald" ></div>
+              <div class="shape_s_option" data-shape="oval"><img src="/images/ovalShape.png" alt="oval" ></div>
+              <div class="shape_s_option" data-shape="marquise"><img src="/images/marquiseShape.png" alt="marquise" ></div>
+              <div class="shape_s_option" data-shape="pear"><img src="/images/pearShape.png" alt="pear" ></div>
+              <div class="shape_s_option" data-shape="cushion"><img src="/images/cushionShape.png" alt="cushion" ></div>
+              <div class="shape_s_option" data-shape="radiant"><img src="/images/radiantShape.png" alt="radiant" ></div>
+              <div class="shape_s_option" data-shape="asscher"><img src="/images/asscherShape.png" alt="asscher" ></div>
+              <div class="shape_s_option" data-shape="herat"><img src="/images/heratShape.png" alt="herat" ></div>
+            </div>
+          </div>
+          <div class="row mt-3">
+            <div class="col-md-6">
+              <div class="price_option">
+                <h6 class="option_title text-uppercase">price</h6>
+
+                <div id="price_slider_range"></div>
+
+                <p class="d-flex justify-content-around align-items-center mt-3">
+                    <input type="text" id="amount_left">
+                    <input type="text" id="amount_right">
+                </p>
+                  
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <table class="results_table">
         <thead>
           <tr>
@@ -774,10 +809,11 @@
           <div class="col-lg-3 col-6">
             <div class="content">
               <h3 class="title">Why Buy From Us </h3>
-              <p>Shipping & Returns </br>
-                Secure Shopping </br>
-                Customer Service
-                Affiliates
+              <ul class="fotter_link list-unstyled">
+                  <li><a href="#">Shipping & Returns</a></li>
+                  <li><a href="#">Services</a></li>
+                  <li><a href="#">Affiliates</a></li>
+                </ul>
               </p>
             </div>
           </div>
@@ -823,7 +859,7 @@
 
 
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <!-- List Js -->
