--- a/index.html
+++ b/index.html
@@ -87,30 +87,43 @@
           <div class="shape">
             <h6 class="option_title text-uppercase">Shape</h6>
             <div class="shape_options d-flex justify-content-between align-items-center">
-              <div class="shape_s_option" data-shape="round"><img src="/images/RoundShape.png" alt="round" ></div>
-              <div class="shape_s_option" data-shape="princess"><img src="/images/princessShape.png" alt="princess" ></div>
-              <div class="shape_s_option" data-shape="emerald"><img src="/images/emeraldShape.png" alt="emerald" ></div>
-              <div class="shape_s_option" data-shape="oval"><img src="/images/ovalShape.png" alt="oval" ></div>
-              <div class="shape_s_option" data-shape="marquise"><img src="/images/marquiseShape.png" alt="marquise" ></div>
-              <div class="shape_s_option" data-shape="pear"><img src="/images/pearShape.png" alt="pear" ></div>
-              <div class="shape_s_option" data-shape="cushion"><img src="/images/cushionShape.png" alt="cushion" ></div>
-              <div class="shape_s_option" data-shape="radiant"><img src="/images/radiantShape.png" alt="radiant" ></div>
-              <div class="shape_s_option" data-shape="asscher"><img src="/images/asscherShape.png" alt="asscher" ></div>
-              <div class="shape_s_option" data-shape="herat"><img src="/images/heratShape.png" alt="herat" ></div>
+              <div class="shape_s_option" data-shape="round"><img src="/images/RoundShape.png" alt="round"></div>
+              <div class="shape_s_option" data-shape="princess"><img src="/images/princessShape.png" alt="princess"></div>
+              <div class="shape_s_option" data-shape="emerald"><img src="/images/emeraldShape.png" alt="emerald"></div>
+              <div class="shape_s_option" data-shape="oval"><img src="/images/ovalShape.png" alt="oval"></div>
+              <div class="shape_s_option" data-shape="marquise"><img src="/images/marquiseShape.png" alt="marquise"></div>
+              <div class="shape_s_option" data-shape="pear"><img src="/images/pearShape.png" alt="pear"></div>
+              <div class="shape_s_option" data-shape="cushion"><img src="/images/cushionShape.png" alt="cushion"></div>
+              <div class="shape_s_option" data-shape="radiant"><img src="/images/radiantShape.png" alt="radiant"></div>
+              <div class="shape_s_option" data-shape="asscher"><img src="/images/asscherShape.png" alt="asscher"></div>
+              <div class="shape_s_option" data-shape="herat"><img src="/images/heratShape.png" alt="herat"></div>
             </div>
           </div>
           <div class="row mt-3">
-            <div class="col-md-6">
+            <div class="col-md-6 pr-md-5">
               <div class="price_option">
                 <h6 class="option_title text-uppercase">price</h6>
 
                 <div id="price_slider_range"></div>
 
                 <p class="d-flex justify-content-around align-items-center mt-3">
-                    <input type="text" id="amount_left">
-                    <input type="text" id="amount_right">
+                  <input type="text" id="amount_left">
+                  <input type="text" id="amount_right">
                 </p>
-                  
+
+              </div>
+            </div>
+            <div class="col-md-6 pl-md-5">
+              <div class="carat_option">
+                <h6 class="option_title text-uppercase">carat</h6>
+
+                <div id="carat_slider_range"></div>
+
+                <p class="d-flex justify-content-around align-items-center mt-3">
+                  <input type="text" id="carat_amount_left">
+                  <input type="text" id="carat_amount_right">
+                </p>
+
               </div>
             </div>
           </div>
@@ -161,7 +174,7 @@
               </div>
             </th>
 
-            <th  class="d-none d-md-table-cell">
+            <th class="d-none d-md-table-cell">
               <div class="sort" data-sort="symmetry">
                 <span>SYMMETRY</span>
                 <div class="attributes"> EX - FAIR </div>
@@ -810,10 +823,10 @@
             <div class="content">
               <h3 class="title">Why Buy From Us </h3>
               <ul class="fotter_link list-unstyled">
-                  <li><a href="#">Shipping & Returns</a></li>
-                  <li><a href="#">Services</a></li>
-                  <li><a href="#">Affiliates</a></li>
-                </ul>
+                <li><a href="#">Shipping & Returns</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Affiliates</a></li>
+              </ul>
               </p>
             </div>
           </div>
@@ -837,7 +850,7 @@
                 <button type="submit">Subscribe</button>
               </form>
               <div class="follow_link mt-2 mt-lg-4">
-              <h3 class="title">Follow us on:</h3>
+                <h3 class="title">Follow us on:</h3>
                 <a class="pr-3" href="#">Facebook</a>
                 <a class="pl-3" href="#">Instagram</a>
               </div>
@@ -860,8 +873,10 @@
 
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
   <!-- List Js -->
   <script src="//cdnjs.cloudflare.com/ajax/libs/list.js/1.5.0/list.min.js"></script>
   <!-- Jquery Ui Js -->
