--- a/index.html
+++ b/index.html
@@ -101,24 +101,60 @@
           </div>
           <div class="row mt-3">
             <div class="col-md-6 pr-md-5">
+
               <div class="price_option">
                 <h6 class="option_title text-uppercase">price</h6>
-
                 <div id="price_slider_range"></div>
-
                 <p class="d-flex justify-content-around align-items-center mt-3">
                   <input type="text" id="amount_left">
                   <input type="text" id="amount_right">
                 </p>
-
               </div>
+
+              <div class="color_option">
+                <h6 class="option_title text-uppercase">Color</h6>
+                <div id="color_slider_range"></div>
+                <ul class="d-flex justify-content-around align-items-center mt-3 list-unstyled">
+                 <li>D</li>
+                 <li>E</li>
+                 <li>F</li>
+                 <li>G</li>
+                 <li>H</li>
+                 <li>I</li>
+                 <li>J</li>
+                 <li>K</li>
+                 <li>L</li>
+                 <li>M</li>
+                </ul>
+              </div>
+
+              <div class="cut_option">
+                <h6 class="option_title text-uppercase">cut</h6>
+                <div id="cut_slider_range"></div>
+                <ul class="d-flex justify-content-around align-items-center mt-3 list-unstyled">
+                 <li>Excellent</li>
+                 <li>Very Good</li>
+                 <li>Good</li>
+                 <li>Fair</li>
+                </ul>
+              </div>
+
+              <div class="symmetry_option">
+                <h6 class="option_title text-uppercase">symmetry</h6>
+                <div id="symmetry_slider_range"></div>
+                <ul class="d-flex justify-content-around align-items-center mt-3 list-unstyled">
+                 <li>Excellent</li>
+                 <li>Very Good</li>
+                 <li>Good</li>
+                 <li>Fair</li>
+                </ul>
+              </div>
+
             </div>
             <div class="col-md-6 pl-md-5">
               <div class="carat_option">
                 <h6 class="option_title text-uppercase">carat</h6>
-
                 <div id="carat_slider_range"></div>
-
                 <p class="d-flex justify-content-around align-items-center mt-3">
                   <input type="text" id="carat_amount_left">
                   <input type="text" id="carat_amount_right">
