--- a/index.html
+++ b/index.html
@@ -115,16 +115,16 @@
                 <h6 class="option_title text-uppercase">Color</h6>
                 <div id="color_slider_range"></div>
                 <ul class="d-flex justify-content-around align-items-center mt-3 list-unstyled">
-                 <li>D</li>
-                 <li>E</li>
-                 <li>F</li>
-                 <li>G</li>
-                 <li>H</li>
-                 <li>I</li>
-                 <li>J</li>
-                 <li>K</li>
-                 <li>L</li>
-                 <li>M</li>
+                  <li>D</li>
+                  <li>E</li>
+                  <li>F</li>
+                  <li>G</li>
+                  <li>H</li>
+                  <li>I</li>
+                  <li>J</li>
+                  <li>K</li>
+                  <li>L</li>
+                  <li>M</li>
                 </ul>
               </div>
 
@@ -132,10 +132,10 @@
                 <h6 class="option_title text-uppercase">cut</h6>
                 <div id="cut_slider_range"></div>
                 <ul class="d-flex justify-content-around align-items-center mt-3 list-unstyled">
-                 <li>Excellent</li>
-                 <li>Very Good</li>
-                 <li>Good</li>
-                 <li>Fair</li>
+                  <li>Excellent</li>
+                  <li>Very Good</li>
+                  <li>Good</li>
+                  <li>Fair</li>
                 </ul>
               </div>
 
@@ -143,10 +143,10 @@
                 <h6 class="option_title text-uppercase">symmetry</h6>
                 <div id="symmetry_slider_range"></div>
                 <ul class="d-flex justify-content-around align-items-center mt-3 list-unstyled">
-                 <li>Excellent</li>
-                 <li>Very Good</li>
-                 <li>Good</li>
-                 <li>Fair</li>
+                  <li>Excellent</li>
+                  <li>Very Good</li>
+                  <li>Good</li>
+                  <li>Fair</li>
                 </ul>
               </div>
 
@@ -159,8 +159,48 @@
                   <input type="text" id="carat_amount_left">
                   <input type="text" id="carat_amount_right">
                 </p>
-
               </div>
+
+              <div class="clarity_option">
+                  <h6 class="option_title text-uppercase">CLARITY</h6>
+                  <div id="clarity_slider_range">
+                    <ul class="dot list-unstyled d-flex justify-content-between align-items-center">
+                      <li class=""></li>
+                      <li class="mx-1"></li>
+                      <li class="mx-1"></li>
+                      <li class="mx-1"></li>
+                      <li class="mx-1"></li>
+                      <li class="mx-1"></li>
+                      <li class="mx-1"></li>
+                      <li class="mx-1"></li>
+                      <li class="mx"></li>
+                    </ul>
+                  </div>
+                  
+                  <ul class="d-flex justify-content-around align-items-center mt-3 list-unstyled">
+                    <li>IF</li>
+                    <li>VVS1</li>
+                    <li>VVS2</li>
+                    <li>VS1</li>
+                    <li>VS2</li>
+                    <li>SI1</li>
+                    <li>SI2</li>
+                    <li>SI3</li>
+                    <li>I1</li>
+                  </ul>
+                </div>
+
+              <div class="polish_option">
+                <h6 class="option_title text-uppercase">polish</h6>
+                <div id="polish_slider_range"></div>
+                <ul class="d-flex justify-content-around align-items-center mt-3 list-unstyled">
+                  <li>Excellent</li>
+                  <li>Very Good</li>
+                  <li>Good</li>
+                  <li>Fair</li>
+                </ul>
+              </div>
+
             </div>
           </div>
         </div>
